--- a/src/cpu/pred/SConscript
+++ b/src/cpu/pred/SConscript
@@ -35,6 +35,8 @@ SimObject('BranchPredictor.py')
 
 DebugFlag('Indirect')
 Source('bpred_unit.cc')
+Source('always_taken.cc')
+Source('perceptron.cc')
 Source('2bit_local.cc')
 Source('btb.cc')
 Source('simple_indirect.cc')
