--- a/src/cpu/pred/SConscript
+++ b/src/cpu/pred/SConscript
@@ -57,6 +57,8 @@ Source('tage_sc_l.cc')
 Source('tage_sc_l_8KB.cc')
 Source('tage_sc_l_64KB.cc')
 Source('perceptron.cc')
+Source('perceptronForest.cc')
+Source('always_not_taken.cc')
 DebugFlag('FreeList')
 DebugFlag('Branch')
 DebugFlag('Tage')
